# serializer version: 1
# name: test_diagnostics_cloudhook_instance
  dict({
    'has_cloudhooks': True,
    'has_valid_external_webhook_url': True,
    'received_activity_data': False,
    'received_measurements': dict({
      'non_positional': list([
        'weight',
        'fat_free_mass',
        'fat_mass_weight',
        'muscle_mass',
        'hydration',
        'bone_mass',
        'extracellular_water',
        'intracellular_water',
        'visceral_fat',
        'basal_metabolic_rate',
        'fat_ratio',
        'height',
        'temperature',
        'body_temperature',
        'skin_temperature',
        'diastolic_blood_pressure',
        'systolic_blood_pressure',
        'heart_rate',
        'sp02',
        'pulse_wave_velocity',
        'vo2',
        'vascular_age',
        'electrodermal_activity_right_foot',
        'electrodermal_activity_left_foot',
        'electrodermal_activity_feet',
      ]),
      'positional': dict({
        'fat_free_mass_for_segments': list([
          'torso',
          'left_leg',
          'left_arm',
          'right_leg',
          'right_arm',
        ]),
        'fat_mass_for_segments': list([
          'torso',
          'left_leg',
          'left_arm',
          'right_leg',
          'right_arm',
        ]),
        'muscle_mass_for_segments': list([
          'torso',
          'left_leg',
          'left_arm',
          'right_leg',
          'right_arm',
          'left_wrist',
        ]),
      }),
    }),
    'received_sleep_data': True,
    'received_workout_data': True,
    'webhooks_connected': True,
  })
# ---
# name: test_diagnostics_polling_instance
  dict({
    'has_cloudhooks': False,
    'has_valid_external_webhook_url': False,
    'received_activity_data': False,
    'received_measurements': dict({
      'non_positional': list([
        'weight',
        'fat_free_mass',
        'fat_mass_weight',
        'muscle_mass',
        'hydration',
        'bone_mass',
        'extracellular_water',
        'intracellular_water',
        'visceral_fat',
        'basal_metabolic_rate',
        'fat_ratio',
        'height',
        'temperature',
        'body_temperature',
        'skin_temperature',
        'diastolic_blood_pressure',
        'systolic_blood_pressure',
        'heart_rate',
        'sp02',
        'pulse_wave_velocity',
        'vo2',
        'vascular_age',
        'electrodermal_activity_right_foot',
        'electrodermal_activity_left_foot',
        'electrodermal_activity_feet',
      ]),
      'positional': dict({
        'fat_free_mass_for_segments': list([
          'torso',
          'left_leg',
          'left_arm',
          'right_leg',
          'right_arm',
        ]),
        'fat_mass_for_segments': list([
          'torso',
          'left_leg',
          'left_arm',
          'right_leg',
          'right_arm',
        ]),
        'muscle_mass_for_segments': list([
          'torso',
          'left_leg',
          'left_arm',
          'right_leg',
          'right_arm',
          'left_wrist',
        ]),
      }),
    }),
    'received_sleep_data': True,
    'received_workout_data': True,
    'webhooks_connected': False,
  })
# ---
# name: test_diagnostics_webhook_instance
  dict({
    'has_cloudhooks': False,
    'has_valid_external_webhook_url': True,
    'received_activity_data': False,
    'received_measurements': dict({
      'non_positional': list([
        'weight',
        'fat_free_mass',
        'fat_mass_weight',
        'muscle_mass',
        'hydration',
        'bone_mass',
        'extracellular_water',
        'intracellular_water',
        'visceral_fat',
        'basal_metabolic_rate',
        'fat_ratio',
        'height',
        'temperature',
        'body_temperature',
        'skin_temperature',
        'diastolic_blood_pressure',
        'systolic_blood_pressure',
        'heart_rate',
        'sp02',
        'pulse_wave_velocity',
        'vo2',
        'vascular_age',
        'electrodermal_activity_right_foot',
        'electrodermal_activity_left_foot',
        'electrodermal_activity_feet',
      ]),
      'positional': dict({
        'fat_free_mass_for_segments': list([
          'torso',
          'left_leg',
          'left_arm',
          'right_leg',
          'right_arm',
        ]),
        'fat_mass_for_segments': list([
          'torso',
          'left_leg',
          'left_arm',
          'right_leg',
          'right_arm',
        ]),
        'muscle_mass_for_segments': list([
          'torso',
          'left_leg',
          'left_arm',
          'right_leg',
          'right_arm',
          'left_wrist',
        ]),
      }),
    }),
    'received_sleep_data': True,
    'received_workout_data': True,
    'webhooks_connected': True,
  })
# ---
